syntax = "proto3";

package formulaserver;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";

message Vector3D {
    double x = 1;
    double y = 2;
    double z = 3;
}

message Vector2D {
    double x = 1;
    double y = 2;
}

enum Module {
    UNKNOWN_MODULE = 0;
    CONTROL_MODULE = 1;
    STATE_EST_MODULE = 2;
    PERCEPTION_MODULE = 3;
    REAL_TIME_DATA_MODULE = 4;
    SERVER = 5;
}

enum Mission {
    MISSION_UNKNOWN = 0;
    MISSION_MANUAL = 1;
    MISSION_STRAIGHT_LINE = 2;
    MISSION_EIGHT = 3;
    MISSION_ENDURENCE = 4;
}

message TriggerMessage {
    string type_url = 1;
    uint32 id = 2;
}

message Header {
    uint32 id = 1;
    google.protobuf.Timestamp timestamp = 2;
    google.protobuf.Timestamp steady_timestamp = 3;
    Module source = 4;
    repeated TriggerMessage triggers = 5;
    int32 priority = 6;
}

message Message {
    Header header = 1;
    google.protobuf.Any data = 2;
}

message CarState {
    Vector2D position = 1;  /// Relative to GPS position. x=North, y=East, in [meters].             
    Vector2D position_deviation = 2;
    
    Vector2D velocity = 3;  /// x=North, y=East, in [m/sec].                            
    Vector2D velocity_deviation = 4;
    
    double theta = 5;   /// Orientation of ego from x axis to y axis [rad]  
    double theta_deviation = 6;  
    
    double theta_dot = 7; /// [rad/sec]
    double theta_dot_deviation = 8;  
        
    double steering_angle = 9;  /// [rad]
    double steering_angle_deviation = 10;
        
    double acceleration = 11; /// [(m/sec)^2]
    double acceleration_deviation = 12;
}

message TimedDriveInstructions
{
    float gas = 1;              /// Goes from 0 to 1.0
    float brakes = 2;           /// Goes from 0 to 1.0
    float steering = 3;         /// Goes from -1.0 to 1.0
    float optimal_speed = 4;    /// values are in [m/sec]. Range: should be 0 to 80[km/h] 
    float time_stamp = 5;        //  values are in seconds
}

